# pruebas_java

./: .bazelproject  .bazelrc  .bazelrc_copia  README.md  WORKSPACE
baeldung/: LEEME.txt
baeldung/security/callback/: BUILD.bazel
baeldung/security/cipher/: BUILD.bazel
baeldung/security/cipher/src/main/java/com/baeldung/cipher/: Encryptor.java
baeldung/security/encrypt/: BUILD.bazel
baeldung/security/encrypt/src/main/java/com/baeldung/encrypt/: FileEncrypterDecrypter.java
baeldung/security/keystore/: BUILD.bazel
baeldung/security/keystore/src/main/java/com/baeldung/keystore/: JavaKeyStore.java
baeldung/security/random/src/main/java/com/baeldung/random/: SecureRandomDemo.java
baeldung/security/sasl/src/main/java/com/baeldung/sasl/: ClientCallbackHandler.java  ServerCallbackHandler.java
baeldung/security/ssl/example/client/: BUILD.bazel
baeldung/security/ssl/example/client/src/main/java/com/baeldung/ssl/example/client/: SimpleClient.java
baeldung/security/ssl/example/server/: BUILD.bazel
baeldung/security/ssl/secureconnection/: BUILD.bazel
bazel/: BUILD.bazel  pruebas-java.bzl
examples/java14/: BUILD.bazel
examples/java14/src/main/java/jtpadilla/switchexpressions/: Example.java
examples/java15/: BUILD.bazel  BUILD.bazel_disabled
examples/java15/src/main/java/jtpadilla/examples/java15/textblocks/: NewEscapeSequences.java
examples/java15/src/main/java/jtpadilla/textblocks/: IncidentalWhiteSpace.java  NewEscapeSequences.java
examples/java16/: BUILD.bazel
examples/java16/src/main/java/jtpadilla/examples/java16/pattermatchinginstanceof/: Example.java
examples/java16/src/main/java/jtpadilla/pattermatchinginstanceof/: Example.java
examples/java16/src/main/java/jtpadilla/records/: Example.java
jdk/java14/: BUILD.bazel
jdk/java15/: BUILD.bazel
jdk/java16/: BUILD.bazel
jdk/java16/src/main/java/jtpadilla/examples/java16/records/: Example.java
jdk/java16/src/main/java/jtpadilla/jdk/java16/pattermatchinginstanceof/: Example.java
jdk/java16/src/main/java/jtpadilla/jdk/java16/records/: Example.java
jdk/preview18/: BUILD.bazel
jdk/preview18/src/main/java/jtpadilla/jdk/java18/preview/: Example.java
tls/: LEEME.txt
tls/baeldung/security/cipher/: BUILD.bazel
tls/baeldung/security/encrypt/: BUILD.bazel
tls/baeldung/security/keystore/: BUILD.bazel
tls/baeldung/security/keystore/src/main/java/com/baeldung/keystore/: JavaKeyStore.java
tls/baeldung/security/keystore/src/test/java/com/baeldung/keystore/test/: JavaKeyStoreUnitTest.java
tls/baeldung/security/random/: BUILD.bazel
tls/baeldung/security/sasl/: BUILD.bazel
tls/baeldung/security/ssl/enabletls/: BUILD.bazel
tls/baeldung/security/ssl/example/ks/client/: clientkeystore.ks  clienttruststore.ks
tls/baeldung/security/ssl/example/ks/server/: serverkeystore.ks
tls/socket/cert/server/: ServerPublicKey.cer  serverKey.jks  serverTrustedCerts.jks
tls/socket/custom/: BUILD.bazel
tls/socket/custom/src/main/resources/: clientKey.jks  clientTrustedCerts.jks
tls/socket/default/server/: BUILD.bazel
tls/socket/properties/: BUILD.bazel
tls/socket/properties/certs/: ClientPublicKey.cer
tls/socket/properties/server/: BUILD.bazel
tls/tls3/: BUILD.bazel
tls/tls3/code2care/: BUILD.bazel
tls/tls3/code2care/src/main/java/code2care/: TSLv1_3Example.java
tls/tls3/googleget/: BUILD.bazel
tls/tls3/gypsyengineer/: BUILD.bazel
tls/tls3/gypsyengineer/all/: BUILD.bazel
tls/tls3/gypsyengineer/all/src/main/java/com/gypsyengineer/tlsbunny/jsse/: TLSv13Test.java
tls/tls3/gypsyengineer/client/: BUILD.bazel
tls/tls3/gypsyengineer/client/src/main/java/com/gypsyengineer/tlsbunny/jsse/client/: ClientLauncher.java  ClientSession.java  TLSv13Client.java
tls/tls3/gypsyengineer/ks/: keystore  truststore
tls/tls3/gypsyengineer/modular/app/client/: BUILD.bazel
tls/tls3/gypsyengineer/modular/app/client/src/main/java/com/gypsyengineer/tlsbunny/jsse/app/client/: TLSv13Client.java
tls/tls3/gypsyengineer/modular/app/server/: BUILD.bazel
tls/tls3/gypsyengineer/modular/app/server/src/main/java/com/gypsyengineer/tlsbunny/jsse/app/server/: TLSv13Server.java
tls/tls3/gypsyengineer/modular/app/serverclient/: BUILD.bazel
tls/tls3/gypsyengineer/modular/app/serverclient/src/main/java/com/gypsyengineer/tlsbunny/jsse/app/serverclient/: TLSv13ServerClient.java
tls/tls3/gypsyengineer/modular/lib/client/: BUILD.bazel
tls/tls3/gypsyengineer/modular/lib/client/src/main/java/com/gypsyengineer/tlsbunny/jsse/lib/client/: ClientLauncher.java  ClientSession.java
tls/tls3/gypsyengineer/modular/lib/server/: BUILD.bazel
tls/tls3/gypsyengineer/modular/lib/server/src/main/java/com/gypsyengineer/tlsbunny/jsse/lib/server/: ServerListener.java  ServerSession.java
tls/tls3/gypsyengineer/original/: BUILD.bazel
tls/tls3/gypsyengineer/original/src/main/java/com/gypsyengineer/tlsbunny/jsse/: TLSv13Test.java
tls/tls3/gypsyengineer/originalclient/: BUILD.bazel
tls/tls3/gypsyengineer/originalclient/src/main/java/com/gypsyengineer/tlsbunny/jsse/client/: ClientSession.java  TLSv13TestClient.java
tls/tls3/gypsyengineer/originalserver/: BUILD.bazel
tls/tls3/gypsyengineer/originalserver/src/main/java/com/gypsyengineer/tlsbunny/jsse/server/: Listener.java  ServerListener.java  ServerSession.java  Session.java  TLSv13TestServer.java
tls/tls3/gypsyengineer/properties/client/: BUILD.bazel
tls/tls3/gypsyengineer/properties/client/src/main/java/com/gypsyengineer/tlsbunny/jsse/client/: ClientSession.java  SSLUtil.java  TLSv13TestClient.java
tls/tls3/gypsyengineer/properties/ks/custom/: LEEME.txt  keystore  server.cer  truststore
tls/tls3/gypsyengineer/properties/server/: BUILD.bazel
tls/tls3/gypsyengineer/properties/server/src/main/java/com/gypsyengineer/tlsbunny/jsse/server/: ServerSession.java
tls/tls3/gypsyengineer/server/: BUILD.bazel
tls/tls3/gypsyengineer/server/src/main/java/com/gypsyengineer/tlsbunny/jsse/server/: ServerConnection.java  ServerListener.java  ServerSession.java  TLSv13Server.java
tls/tls3/gypsyengineer/src/main/java/com/gypsyengineer/tlsbunny/jsse/: TLSv13Test.java
(+27 files in other folders)
