java_binary(
    name = "incidentalwhitespace",
    srcs = glob(["src/main/java/jtpadilla/textblocks/IncidentalWhiteSpace.java"]),
    main_class = "jtpadilla.textblocks.IncidentalWhiteSpace",
    deps = [
    ],
)

java_binary(
    name = "newescapesecuences",
    srcs = glob(["src/main/java/jtpadilla/textblocks/NewEscapeSequences.java"]),
    main_class = "jtpadilla.textblocks.NewEscapeSequences",
    deps = [
    ],
)
