java_binary(
    name = "pattermatchinginstanceof",
    srcs = glob(["src/main/java/jtpadilla/examples/java16/pattermatchinginstanceof/Example.java"]),
    main_class = "jtpadilla.examples.java16.pattermatchinginstanceof.Example",
    deps = [
    ],
)

java_binary(
    name = "records",
    srcs = glob(["src/main/java/jtpadilla/examples/java16/records/Example.java"]),
    main_class = "jtpadilla.examples.java16.records.Example",
    deps = [
    ],
)
