java_binary(
    name = "pattermatchinginstanceof",
    srcs = glob(["src/main/java/jtpadilla/jdk/java16/pattermatchinginstanceof/Example.java"]),
    main_class = "jtpadilla.jdk.java16.pattermatchinginstanceof.Example",
    deps = [
    ],
)

java_binary(
    name = "records",
    srcs = glob(["src/main/java/jtpadilla/jdk/java16/records/Example.java"]),
    main_class = "jtpadilla.jdk.java16.records.Example",
    deps = [
    ],
)
