java_library(
    name = "cipher",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
    ],
)

java_test(
    name = "test",
    srcs = glob(["src/test/java/**/*.java"]),
    test_class = "com.baeldung.cipher.test.EncryptorUnitTest",
    deps = [
        ":cipher",
        "@maven//:org_assertj_assertj_core",
    ],
)
