java_library(
    name = "encrypt",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
    ],
)

java_test(
    name = "test",
    srcs = glob(["src/test/java/**/*.java"]),
    test_class = "com.baeldung.encrypt.test.FileEncrypterDecrypterIntegrationTest",
    deps = [
        ":encrypt",
        "@maven//:org_hamcrest_hamcrest",
    ],
)
