java_library(
    name = "keystore",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
    ],
)

#java_test(
#    name = "test",
#    srcs = glob(["src/test/java/**/*.java"]),
#    test_class = "com.baeldung.keystore.test.JavaKeyStoreUnitTest",
#    deps = [
#        ":keystore",
#    ],
#)
