java_binary(
    name = "server",
    srcs = glob(["src/main/java/**/*.java"]),
    jvm_flags = [
        "'-Djavax.net.debug=ssl'",
        "'-Djavax.net.ssl.keyStore=/tmp/gypsyengineer.ks/keystore'",
        "'-Djavax.net.ssl.keyStorePassword=passphrase'",
        "'-Djavax.net.ssl.trustStore=/tmp/gypsyengineer.ks/truststore'",
        "'-Djavax.net.ssl.trustStorePassword=passphrase'",
    ],
    main_class = "com.gypsyengineer.tlsbunny.jsse.server.TLSv13Server",
)
