java_binary(
    name = "client",
    srcs = glob(["src/main/java/**/*.java"]),
    jvm_flags = [
        #        "'-Djavax.net.debug=all'",
        "'-Djavax.net.debug=ssl'",
        "'-Djavax.net.ssl.keyStore=/tmp/ks/client/clientkeystore.ks'",
        "'-Djavax.net.ssl.keyStorePassword=123456'",
        "'-Djavax.net.ssl.trustStore=/tmp/ks/client/clienttruststore.ks'",
        "'-Djavax.net.ssl.trustStorePassword=123456'",
    ],
    main_class = "com.baeldung.ssl.example.client.SimpleClient",
)
