java_binary(
    name = "originalclient",
    srcs = glob(["src/main/java/**/*.java"]),
    jvm_flags = [
        #        "'-Djavax.net.debug=ssl'",
        #        "'-Djavax.net.ssl.keyStore=/opt/gypsyengineer.ks/samples/keystore'",
        #        "'-Djavax.net.ssl.keyStorePassword=passphrase'",
        #        "'-Djavax.net.ssl.trustStore=/opt/gypsyengineer.ks/samples/truststore'",
        #        "'-Djavax.net.ssl.trustStorePassword=passphrase'",
        #        "'-Djavax.net.ssl.trustStore=/etc/ssl/certs/java/cacerts'",
        #        "'-Djavax.net.ssl.trustStore=/opt/gypsyengineer.ks/custom/truststore'",
        #        "'-Djavax.net.ssl.trustStorePassword=passphrase'",
    ],
    main_class = "com.gypsyengineer.tlsbunny.jsse.client.TLSv13TestClient",
)
