java_binary(
    name = "server",
    srcs = glob(["src/main/java/**/*.java"]),
    jvm_flags = [
        #        "'-Djavax.net.debug=ssl'",
        "'-Djavax.net.ssl.keyStore=/opt/gypsyengineer.ks/keystore'",
        "'-Djavax.net.ssl.keyStorePassword=passphrase'",
        "'-Djavax.net.ssl.trustStore=/opt/gypsyengineer.ks/truststore'",
        "'-Djavax.net.ssl.trustStorePassword=passphrase'",
    ],
    main_class = "com.gypsyengineer.tlsbunny.jsse.app.server.TLSv13Server",
    deps = [
        "//tls/tls3/gypsyengineer/modular/lib/server",
    ],
)
