java_binary(
    name = "serverclient",
    srcs = glob(["src/main/java/**/*.java"]),
    main_class = "com.gypsyengineer.tlsbunny.jsse.app.serverclient.TLSv13ServerClient.",
    deps = [
        "//tls/tls3/gypsyengineer/modular/lib/client",
        "//tls/tls3/gypsyengineer/modular/lib/server",
    ],
)
